[metadata]
name = proqub
version = 2.0.2
author = Prasad, Aryan, Tanishka
author_email = prasaddesale05@gmail.com,burhadearyan@gmail.com
description = A Python library for processing hyperspectral data cubes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pras2005/proqub
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    spectral
    matplotlib
    plotly
